--- a/src/themes/eui-amsterdam/overrides/_key_pad_menu.scss
+++ b/src/themes/eui-amsterdam/overrides/_key_pad_menu.scss
@@ -1,7 +1,3 @@
-/**
- * 1. If this class is applied to a button, we need to override the Chrome default font.
- * 2. If it has a BetaBadge, make sure only the first letter shows
- */
 .euiKeyPadMenuItem {
   border: none !important; // sass-lint:disable-line no-important
   box-shadow: none;
@@ -31,12 +27,17 @@
     &:focus,
     &:focus-within {
       @include euiFocusBackground;
-      color: $euiColorPrimaryText;
+      // Calculate the right text contrast ratio based on focus transparency
+      $backgroundColorSimulated: mix($euiColorEmptyShade, $euiColorPrimary, $euiFocusTransparencyPercent);
+      color: makeHighContrastColor($euiColorPrimaryText, $backgroundColorSimulated);
     }
   }
 
   &.euiKeyPadMenuItem-isSelected.euiKeyPadMenuItem-isDisabled {
     @include euiFocusBackground($euiColorDisabled);
+    // Calculate the right text contrast ratio based on focus transparency
+    $backgroundColorSimulated: mix($euiColorEmptyShade, $euiColorDisabled, $euiFocusTransparencyPercent);
+    color: makeDisabledContrastColor($euiColorDisabledText, $backgroundColorSimulated);
   }
 }
 
